[package]
name = "networking-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ipnet = { version = "2.4.0", features = ["serde"] }
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["process", "io-util", "fs"] }
wireguard-keys = "0.1.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt"] }
