[package]
name = "fractal-networking-wrappers"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <patrick@ether.ai>"]
description = "Async wrappers around Linux networking utilities."
license = "AGPL-3.0-only"
repository = "https://github.com/fractalnetworksco/networking-wrappers"

[dependencies]
anyhow = "1.0.56"
ipnet = { version = "2.4.0", features = ["serde"] }
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["process", "io-util", "fs"] }
wireguard-keys = "0.1.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt"] }
